...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zop-zk-Cef">
                    <rect key="frame" x="10" y="106" width="355" height="30"/>
                    <color key="backgroundColor" red="0.78017430929999998" green="0.86903425099999998" blue="0.62558724349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="Lhi-34-RmE"/>
                    </constraints>
                    <state key="normal" title="PopupInView1">
                        <color key="titleColor" red="0.043137254899999998" green="0.37647058820000001" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="popupInView1:" destination="-1" eventType="touchUpInside" id="Hfh-KF-xJa"/>
                    </connections>
                </button>
...
